--- a/azure-pipelines-zebracorn.yml
+++ b/azure-pipelines-zebracorn.yml
@@ -146,6 +146,7 @@ jobs:
       # $env:CROSS = "mingw32-"
       dir C:\\ProgramData\\chocolatey\\lib\\mingw\\tools\\install\\mingw64\\bin\\
       cp C:\\ProgramData\\chocolatey\\lib\\mingw\\tools\\install\\mingw64\\bin\\objcopy.exe C:\\ProgramData\\chocolatey\\lib\\mingw\\tools\\install\\mingw64\\bin\\gobjcopy.exe
+      cp C:\\ProgramData\\chocolatey\\lib\\mingw\\tools\\install\\mingw64\\bin\\gcc.exe C:\\ProgramData\\chocolatey\\lib\\mingw\\tools\\install\\mingw64\\bin\\cc.exe
       make -C bindings test
     displayName: 'Python / Artifact creation'
   - powershell: |
