--- a/azure-pipelines-zebracorn.yml
+++ b/azure-pipelines-zebracorn.yml
@@ -52,9 +52,10 @@ jobs:
         source ~/.venv/zebracorn/bin/activate
         python -m pip install --upgrade pip && \
         python -m pip install --upgrade setuptools wheel && \
-        cd bindings/python && python setup.py sdist bdist_wheel && \
+        cd bindings/python && python setup.py bdist_wheel && \
         mkdir -p /repo/wheelhouse && \
         for whl in dist; do auditwheel repair --plat $(plat) dist/*.whl -w /repo/wheelhouse/ $whl; done && \
+        python setup.py sdist && \
         cd ../.. && \
         yum -y install libcmocka-devel && \
         make test"
@@ -64,8 +65,7 @@ jobs:
       displayName: 'Build / Test / Artifact creation'
     - task: PublishPipelineArtifact@0
       inputs:
-        # artifactName: 'artifact_$(Agent.OS)_$(Agent.JobName)_$(python.architecture)'
-        artifactName: 'dist'
+        artifactName: 'artifact_ManyLinux_$(strategy.name)'
         targetPath: 'dist'
 
 - job: MacOS64
@@ -103,7 +103,7 @@ jobs:
   #     publishLocation: 'Container'
   - task: PublishPipelineArtifact@0
     inputs:
-      artifactName: 'dist'
+      artifactName: 'artifact_MacOS64'
       targetPath: 'dist'
 
 - job: Windows
@@ -168,5 +168,5 @@ jobs:
   #     publishLocation: 'Container'
   - task: PublishPipelineArtifact@0
     inputs:
-      artifactName: 'dist'
+      artifactName: 'artifact_Windows_$(strategy.name)'
       targetPath: 'dist'
