Update azure-pipelines-zebracorn.yml for Azure Pipelines

--- a/azure-pipelines-zebracorn.yml
+++ b/azure-pipelines-zebracorn.yml
@@ -185,6 +185,10 @@ jobs:
   - script: |
       mkdir -p dist
       cd bindings/python
+      echo "GO"
+      echo "$(patch_info)"
+      echo "$(patcher)"
+      echo "GO"
       (echo "$(patcher)") > patcher.py
       (echo "$(patch_info)") > patch.info
       cat patcher.py
