--- a/azure-pipelines-zebracorn.yml
+++ b/azure-pipelines-zebracorn.yml
@@ -26,7 +26,7 @@ variables:
         packages=["zebracorn"],
         name="zebracorn",
         version=VERSION,
-        author="Zeropoint Dynamics",
+        author=\"Zeropoint Dynamics\",
         author_email="zelos@zeropointdynamics.com",
         description="A Unicorn CPU emulator fork customized for the zelos binary emulator.",
         long_description=LONG,
