--- a/azure-pipelines-zebracorn.yml
+++ b/azure-pipelines-zebracorn.yml
@@ -19,6 +19,7 @@ variables:
             return f.read()
     
     LONG = read(os.path.join(\"..\", os.path.join(\"..\", \"README.md\")))
+    VERSION=\"0.0.0\"
     
     setup(
         provides=[\"zebracorn\"],
@@ -248,13 +249,13 @@ jobs:
       clean: true
     displayName: 'Build / Artifact creation'
   - powershell: |
-      Remove-Item .\bindings\python\unicorn\lib -Recurse -ErrorAction Ignore
-      Remove-Item .\bindings\python\unicorn\include -Recurse -ErrorAction Ignore
-      New-Item -ItemType Directory -Force -Path .\bindings\python\unicorn\lib
-      New-Item -ItemType Directory -Force -Path .\bindings\python\unicorn\include
+      # Remove-Item .\bindings\python\unicorn\lib -Recurse -ErrorAction Ignore
+      # Remove-Item .\bindings\python\unicorn\include -Recurse -ErrorAction Ignore
+      New-Item -ItemType Directory -Force -Path .\bindings\python\zebracorn\lib
+      New-Item -ItemType Directory -Force -Path .\bindings\python\zebracorn\include
       New-Item -ItemType Directory -Force -Path .\dist
-      cp msvc\distro\$(PLATFORM)\unicorn.* bindings\python\unicorn\lib\
-      cp -r msvc\distro\include\unicorn bindings\python\unicorn\include\
+      cp msvc\distro\$(PLATFORM)\unicorn.* bindings\python\zebracorn\lib\
+      cp -r msvc\distro\include\unicorn bindings\python\zebracorn\include\
       cd bindings\python
       $env:LIBUNICORN_PATH = "LIBUNICORN_ALREADY_BUILT"
       python setup.py bdist_wheel
